<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="@string/pref_header_general">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_smart_connect"
        android:summary="@string/pref_description_smart_connect"
        android:title="@string/pref_title_smart_connect" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_disconnect_notif"
        android:summary="@string/pref_description_disconnect_notif"
        android:title="@string/pref_title_disconnect_notif" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_device_name"
        android:inputType="textCapWords"
        android:key="@string/pref_device_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_device_name" />

    <PreferenceScreen
        android:key="@string/pref_account"
        android:title="@string/pref_account_logout" />

</PreferenceScreen>
