<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.texasgamer.zephyr.activity.MainActivity">

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:clipToPadding="true"
        android:padding="24dp"
        android:background="@android:color/white"
        android:elevation="6dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sheet_notif_title"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sheet_notif_text"
            android:textSize="16sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/enableNotificationsBtn"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/sheet_notif_btn"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="8dp"
            android:layout_gravity="end"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_height="100dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/avatar"
            android:layout_width="100dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/avatar"
            android:layout_marginStart="12dp"
            android:id="@+id/username"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <Button
            android:text="@string/btn_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/connect_btn"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/colorAccent"
            android:layout_toEndOf="@+id/avatar"
            android:layout_below="@id/username"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/avatar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp"
            android:id="@+id/steamHint">

            <ImageView
                android:layout_height="match_parent"
                app:srcCompat="@drawable/steam"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:layout_width="75dp"
                android:layout_marginEnd="8dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:text="@string/steam_hint_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:textStyle="normal|bold"
                    android:textSize="18sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:text="@string/steam_hint_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/steamHint"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp"
            android:id="@+id/redditHint">

            <ImageView
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:layout_width="75dp"
                android:layout_marginEnd="8dp"
                app:srcCompat="@drawable/reddit" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:text="@string/reddit_hint_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="normal|bold"
                    android:textSize="18sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:text="@string/reddit_hint_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:text="@string/connection_status_disconnected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/status_msg"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp" />

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>