<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.texasgamer.zephyr.activity.LoginActivity"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/ic_launcher_lg"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/zephyr_icon" />

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/zephyr"
        android:textSize="36sp"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif"
        android:layout_below="@id/zephyr_icon"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/login_tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="47dp"
        android:id="@+id/textView2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/buttonTextColor" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn"
        android:text="@string/login_btn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="44dp"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:id="@+id/privacy_policy_btn"
        android:textColor="@color/buttonTextColor" />

</RelativeLayout>
